test/types/string/bradc/string2complex/badStringToComplex6.good
badStringToComplex6.chpl:3: error: Unexpected character when converting from string to complex(64): 'j'
