test/types/string/bradc/string2complex/badStringToComplex6.chpl
var s = "1.2 + 3.4j";

var c = s:complex(64);
